iai-callgrind/tests/ui/test_main_invalid_library_benchmark_groups.stderr
error[E0425]: cannot find function `__compare_by_id` in module `some_func`
  --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
   |
6  |     main!(library_benchmark_groups = some_func);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `some_func`
   |
note: function `crate::test_main_when_invalid_config::my_group::__compare_by_id` exists but is inaccessible
  --> tests/ui/test_main_invalid_library_benchmark_groups.rs:14:5
   |
14 | /     library_benchmark_group!(
15 | |         name = my_group;
16 | |         benchmarks = some_func
17 | |     );
   | |_____^ not accessible
   = note: this error originates in the macro `main` which comes from the expansion of the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: function import `__run_setup` is private
 --> src/macros.rs
  |
  |                     has_setup: $group::__run_setup(false),
  |                                        ^^^^^^^^^^^ private function import
  |
note: the function import `__run_setup` is defined here...
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
  |
3 |     #[library_benchmark]
  |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run_setup` which is defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: function import `__run_teardown` is private
 --> src/macros.rs
  |
  |                     has_teardown: $group::__run_teardown(false),
  |                                           ^^^^^^^^^^^^^^ private function import
  |
note: the function import `__run_teardown` is defined here...
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
  |
3 |     #[library_benchmark]
  |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run_teardown` which is defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: function import `__run_setup` is private
 --> src/macros.rs
  |
  | ...                   $group::__run_setup(true);
  |                               ^^^^^^^^^^^ private function import
  |
note: the function import `__run_setup` is defined here...
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
  |
3 |     #[library_benchmark]
  |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run_setup` which is defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: function import `__run_teardown` is private
 --> src/macros.rs
  |
  | ...                   $group::__run_teardown(true);
  |                               ^^^^^^^^^^^^^^ private function import
  |
note: the function import `__run_teardown` is defined here...
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
  |
3 |     #[library_benchmark]
  |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run_teardown` which is defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: function import `__run` is private
 --> src/macros.rs
  |
  | ...                   $group::__run(group_index, bench_index);
  |                               ^^^^^ private function import
  |
note: the function import `__run` is defined here...
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
  |
3 |     #[library_benchmark]
  |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run` which is defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected struct `InternalMacroLibBench`, found tuple
  |     this is an iterator with items of type `&InternalMacroLibBench`
  |
  = note: expected struct `InternalMacroLibBench`
              found tuple `(_, _, _)`
  = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this function takes 0 arguments but 2 arguments were supplied
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     argument of type `usize` unexpected
  |     argument of type `usize` unexpected
  |
note: function defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the extra arguments
 --> src/macros.rs
  |
  |                                     $group::__run();
  |                                                  ~~

error[E0277]: the trait bound `InternalLibraryBenchmarkConfig: From<&str>` is not satisfied
  --> tests/ui/test_main_invalid_library_benchmark_groups.rs:20:18
   |
19 | /     main!(
20 | |         config = "some";
   | |                  ^^^^^^ the trait `From<&str>` is not implemented for `InternalLibraryBenchmarkConfig`
21 | |         library_benchmark_groups = my_group
22 | |     );
   | |_____- required by a bound introduced by this call
   |
   = help: the following other types implement trait `From<T>`:
             <InternalLibraryBenchmarkConfig as From<&LibraryBenchmarkConfig>>
             <InternalLibraryBenchmarkConfig as From<&mut LibraryBenchmarkConfig>>
             <InternalLibraryBenchmarkConfig as From<LibraryBenchmarkConfig>>
   = note: required for `&str` to implement `Into<InternalLibraryBenchmarkConfig>`
